# classactivity16

./: CMakeLists.txt  main.cpp
utils/: average.cpp  average.hpp  compareStudents.cpp  compareStudents.hpp  getAboveAverage.cpp  getAboveAverage.hpp  getHighest.cpp  getHighest.hpp  getLowest.cpp  getLowest.hpp
